--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import "/node_modules/primeng/resources/themes/lara-light-blue/theme.css";
+@import "/node_modules/primeng/resources/primeng.css";
+@import "/node_modules/primeflex/primeflex.css";
+@import "/node_modules/primeflex/themes/primeone-light.css";
+
+.dir-rtl {
+  direction: rtl !important;
+}
+.p-datatable .p-datatable-thead > tr > th {
+  text-align: right !important;
+}
